objects/MTO_High_Runner_Field_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Column_Sequence__c</fullName>
        <label>Column Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEditable</label>
        <type>Checkbox</type>
    </fields>
    <label>MTO High Runner Field Mapping</label>
</CustomObject>